user/logs/stride-180403_181135.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Jedi\Desktop\ToontownAwesome 4.0\toontown\toonbase\ToontownStart.py", line 189, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 35, in <module>
    from toontown.makeatoon import MakeAToon
  File "toontown\makeatoon\MakeAToon.py", line 21, in <module>
    from toontown.toon import LocalToon
  File "toontown\toon\LocalToon.py", line 30, in <module>
    from toontown.quest import QuestMap
  File "toontown\quest\QuestMap.py", line 9, in <module>
    from toontown.suit import SuitPlannerBase
  File "toontown\suit\SuitPlannerBase.py", line 5, in <module>
    from toontown.building import SuitBuildingGlobals
  File "toontown\building\SuitBuildingGlobals.py", line 154
    SUIT_BLDG_INFO_FLOORS = 0
                          ^
SyntaxError: invalid syntax
